--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   docusaurus:
     image: node:18.12-slim
     ports:
-      - "8180:3000"  # 将容器的 3000 端口映射到宿主机的 8180 端口
+      - 8180:3000
     volumes:
-      - ./:/app  # 映射 Docusaurus 项目文件夹到容器中的 /app 文件夹
-    working_dir: /app  # 设置工作目录
+      - ./:/home/app
+    working_dir: /home/app
     command: >
       sh -c "npm install && npm start"
