--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-pdf/renderer": "^3.1.14",
     "clsx": "^1.2.1",
     "hast-util-is-element": "^1.1.0",
+    "pdfjs-dist": "^3.11.174",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
